homework-03/k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-app
  labels:
    app: health-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-app
  template:
    metadata:
      name: health-app
      labels:
        app: health-app
    spec:
      containers:
        - name: health-app
          image: paulrozhkin/otus-microservices-homework-03:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
