homework-03/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
