homework-03/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /otusapp/rozhkin
            pathType: Prefix
            backend:
              service:
                name: health-service
                port:
                  number: 80
